--- a/seoul.html
+++ b/seoul.html
@@ -273,7 +273,7 @@
                     </li>
                     <li>
                       <div class="table_bold">
-                        <p>장례관리사</p>
+                        <p>행사복지사</p>
                       </div>
                       <div class="table_nomal">
                         <p>1명 (3일 / 16시간)</p>
@@ -317,10 +317,19 @@
                     </li>
                     <li>
                       <div class="table_bold">
-                        <p>목관</p>
+                        <p>관</p>
                       </div>
-                      <div class="table_nomal">
-                        <p>오동나무 4.2cm 2단</p>
+                      <div class="table_nomal two">
+                        <ul>
+                          <li>
+                            <p>매장 시</p>
+                            <p>오동나무 4.2cm 2단</p>
+                          </li>
+                          <li>
+                            <p>화장 시</p>
+                            <p>오동나무</p>
+                          </li>
+                        </ul>
                       </div>
                     </li>
                     <li>
@@ -328,7 +337,6 @@
                         <p>화장 시</p>
                       </div>
                       <div class="table_nomal">
-                        <p>오동나무 관 제공</p>
                         <p>유골함 제공</p>
                       </div>
                     </li>
@@ -391,7 +399,7 @@
                     </li>
                     <li>
                       <div class="table_bold">
-                        <p>장례관리사</p>
+                        <p>행사복지사</p>
                       </div>
                       <div class="table_nomal">
                         <p>1명 (3일 / 16시간)</p>
@@ -435,10 +443,19 @@
                     </li>
                     <li>
                       <div class="table_bold">
-                        <p>목관</p>
+                        <p>관</p>
                       </div>
-                      <div class="table_nomal">
-                        <p>오동나무 4.2cm 2단</p>
+                      <div class="table_nomal two">
+                        <ul>
+                          <li>
+                            <p>매장 시</p>
+                            <p>오동나무 4.2cm 2단</p>
+                          </li>
+                          <li>
+                            <p>화장 시</p>
+                            <p>오동나무</p>
+                          </li>
+                        </ul>
                       </div>
                     </li>
                     <li>
@@ -446,7 +463,6 @@
                         <p>화장 시</p>
                       </div>
                       <div class="table_nomal">
-                        <p>오동나무 관 제공</p>
                         <p>유골함 제공</p>
                       </div>
                     </li>
@@ -509,7 +525,7 @@
                     </li>
                     <li>
                       <div class="table_bold">
-                        <p>장례관리사</p>
+                        <p>행사복지사</p>
                       </div>
                       <div class="table_nomal">
                         <p>1명 (3일 / 16시간)</p>
@@ -553,10 +569,19 @@
                     </li>
                     <li>
                       <div class="table_bold">
-                        <p>목관</p>
+                        <p>관</p>
                       </div>
-                      <div class="table_nomal">
-                        <p>오동나무 4.2cm 2단</p>
+                      <div class="table_nomal two">
+                        <ul>
+                          <li>
+                            <p>매장 시</p>
+                            <p>오동나무 4.2cm 2단</p>
+                          </li>
+                          <li>
+                            <p>화장 시</p>
+                            <p>오동나무</p>
+                          </li>
+                        </ul>
                       </div>
                     </li>
                     <li>
@@ -564,7 +589,6 @@
                         <p>화장 시</p>
                       </div>
                       <div class="table_nomal">
-                        <p>오동나무 관 제공</p>
                         <p>유골함 제공</p>
                       </div>
                     </li>
@@ -634,7 +658,7 @@
                     </li>
                     <li>
                       <div class="table_bold">
-                        <p>장례관리사</p>
+                        <p>행사복지사</p>
                       </div>
                       <div class="table_nomal">
                         <p>1명 (3일 / 16시간)</p>
@@ -678,10 +702,19 @@
                     </li>
                     <li>
                       <div class="table_bold">
-                        <p>목관</p>
+                        <p>관</p>
                       </div>
-                      <div class="table_nomal">
-                        <p>오동나무 4.2cm 2단</p>
+                      <div class="table_nomal two">
+                        <ul>
+                          <li>
+                            <p>매장 시</p>
+                            <p>오동나무 4.2cm 2단</p>
+                          </li>
+                          <li>
+                            <p>화장 시</p>
+                            <p>오동나무</p>
+                          </li>
+                        </ul>
                       </div>
                     </li>
                     <li>
@@ -689,7 +722,6 @@
                         <p>화장 시</p>
                       </div>
                       <div class="table_nomal">
-                        <p>오동나무 관 제공</p>
                         <p>유골함 제공</p>
                       </div>
                     </li>
@@ -755,7 +787,7 @@
                     </li>
                     <li>
                       <div class="table_bold">
-                        <p>장례관리사</p>
+                        <p>행사복지사</p>
                       </div>
                       <div class="table_nomal">
                         <p>1명 (3일 / 16시간)</p>
@@ -799,10 +831,19 @@
                     </li>
                     <li>
                       <div class="table_bold">
-                        <p>목관</p>
+                        <p>관</p>
                       </div>
-                      <div class="table_nomal">
-                        <p>오동나무 4.2cm 2단</p>
+                      <div class="table_nomal two">
+                        <ul>
+                          <li>
+                            <p>매장 시</p>
+                            <p>오동나무 4.2cm 2단</p>
+                          </li>
+                          <li>
+                            <p>화장 시</p>
+                            <p>오동나무</p>
+                          </li>
+                        </ul>
                       </div>
                     </li>
                     <li>
@@ -810,7 +851,6 @@
                         <p>화장 시</p>
                       </div>
                       <div class="table_nomal">
-                        <p>오동나무 관 제공</p>
                         <p>유골함 제공</p>
                       </div>
                     </li>
@@ -876,7 +916,7 @@
                     </li>
                     <li>
                       <div class="table_bold">
-                        <p>장례관리사</p>
+                        <p>행사복지사</p>
                       </div>
                       <div class="table_nomal">
                         <p>1명 (3일 / 16시간)</p>
@@ -920,10 +960,19 @@
                     </li>
                     <li>
                       <div class="table_bold">
-                        <p>목관</p>
+                        <p>관</p>
                       </div>
-                      <div class="table_nomal">
-                        <p>오동나무 4.2cm 2단</p>
+                      <div class="table_nomal two">
+                        <ul>
+                          <li>
+                            <p>매장 시</p>
+                            <p>오동나무 4.2cm 2단</p>
+                          </li>
+                          <li>
+                            <p>화장 시</p>
+                            <p>오동나무</p>
+                          </li>
+                        </ul>
                       </div>
                     </li>
                     <li>
@@ -931,7 +980,6 @@
                         <p>화장 시</p>
                       </div>
                       <div class="table_nomal">
-                        <p>오동나무 관 제공</p>
                         <p>유골함 제공</p>
                       </div>
                     </li>
@@ -1281,9 +1329,9 @@
                 <li class="list_tab_btn" data-tab="3">보람여주장례식장</li>
                 <li class="list_tab_btn" data-tab="4">천안국빈장례식장</li>
                 <li class="list_tab_btn" data-tab="5">동래봉생병원<br />장례식장</li>
-                <li class="list_tab_btn" data-tab="6">양산부산대학교병원장례식장</li>
-                <li class="list_tab_btn" data-tab="7">창원경상대학교병원장례식장</li>
-                <li class="list_tab_btn" data-tab="8">보람세민에스병원장례식장</li>
+                <li class="list_tab_btn" data-tab="6">양산부산대학교병원<br />장례식장</li>
+                <li class="list_tab_btn" data-tab="7">창원경상대학교병원<br />장례식장</li>
+                <li class="list_tab_btn" data-tab="8">보람세민에스병원<br />장례식장</li>
                 <li class="list_tab_btn" data-tab="9">대동병원장례식장</li>
                 <li class="list_tab_btn" data-tab="10">새천년장례식장</li>
                 <li class="list_tab_btn" data-tab="11">보람여수장례식장</li>
