--- a/seoul_metro.html
+++ b/seoul_metro.html
@@ -229,7 +229,7 @@
                     </li>
                     <li>
                       <div class="table_bold">
-                        <p>장례관리사</p>
+                        <p>행사복지사</p>
                       </div>
                       <div class="table_nomal">
                         <p>1명 (3일 / 16시간)</p>
@@ -273,10 +273,19 @@
                     </li>
                     <li>
                       <div class="table_bold">
-                        <p>목관</p>
+                        <p>관</p>
                       </div>
-                      <div class="table_nomal">
-                        <p>오동나무 4.2cm 2단</p>
+                      <div class="table_nomal two">
+                        <ul>
+                          <li>
+                            <p>매장 시</p>
+                            <p>오동나무 4.2cm 2단</p>
+                          </li>
+                          <li>
+                            <p>화장 시</p>
+                            <p>오동나무</p>
+                          </li>
+                        </ul>
                       </div>
                     </li>
                     <li>
@@ -284,7 +293,6 @@
                         <p>화장 시</p>
                       </div>
                       <div class="table_nomal">
-                        <p>오동나무 관 제공</p>
                         <p>유골함 제공</p>
                       </div>
                     </li>
@@ -339,7 +347,7 @@
                     </li>
                     <li>
                       <div class="table_bold">
-                        <p>장례관리사</p>
+                        <p>행사복지사</p>
                       </div>
                       <div class="table_nomal">
                         <p>1명 (3일 / 16시간)</p>
@@ -383,10 +391,19 @@
                     </li>
                     <li>
                       <div class="table_bold">
-                        <p>목관</p>
+                        <p>관</p>
                       </div>
-                      <div class="table_nomal">
-                        <p>오동나무 4.2cm 2단</p>
+                      <div class="table_nomal two">
+                        <ul>
+                          <li>
+                            <p>매장 시</p>
+                            <p>오동나무 4.2cm 2단</p>
+                          </li>
+                          <li>
+                            <p>화장 시</p>
+                            <p>오동나무</p>
+                          </li>
+                        </ul>
                       </div>
                     </li>
                     <li>
@@ -394,7 +411,6 @@
                         <p>화장 시</p>
                       </div>
                       <div class="table_nomal">
-                        <p>오동나무 관 제공</p>
                         <p>유골함 제공</p>
                       </div>
                     </li>
@@ -457,7 +473,7 @@
                     </li>
                     <li>
                       <div class="table_bold">
-                        <p>장례관리사</p>
+                        <p>행사복지사</p>
                       </div>
                       <div class="table_nomal">
                         <p>1명 (3일 / 16시간)</p>
@@ -501,10 +517,19 @@
                     </li>
                     <li>
                       <div class="table_bold">
-                        <p>목관</p>
+                        <p>관</p>
                       </div>
-                      <div class="table_nomal">
-                        <p>오동나무 4.2cm 2단</p>
+                      <div class="table_nomal two">
+                        <ul>
+                          <li>
+                            <p>매장 시</p>
+                            <p>오동나무 4.2cm 2단</p>
+                          </li>
+                          <li>
+                            <p>화장 시</p>
+                            <p>오동나무</p>
+                          </li>
+                        </ul>
                       </div>
                     </li>
                     <li>
@@ -512,7 +537,6 @@
                         <p>화장 시</p>
                       </div>
                       <div class="table_nomal">
-                        <p>오동나무 관 제공</p>
                         <p>유골함 제공</p>
                       </div>
                     </li>
@@ -582,7 +606,7 @@
                     </li>
                     <li>
                       <div class="table_bold">
-                        <p>장례관리사</p>
+                        <p>행사복지사</p>
                       </div>
                       <div class="table_nomal">
                         <p>1명 (3일 / 16시간)</p>
@@ -626,10 +650,19 @@
                     </li>
                     <li>
                       <div class="table_bold">
-                        <p>목관</p>
+                        <p>관</p>
                       </div>
-                      <div class="table_nomal">
-                        <p>오동나무 4.2cm 2단</p>
+                      <div class="table_nomal two">
+                        <ul>
+                          <li>
+                            <p>매장 시</p>
+                            <p>오동나무 4.2cm 2단</p>
+                          </li>
+                          <li>
+                            <p>화장 시</p>
+                            <p>오동나무</p>
+                          </li>
+                        </ul>
                       </div>
                     </li>
                     <li>
@@ -637,7 +670,6 @@
                         <p>화장 시</p>
                       </div>
                       <div class="table_nomal">
-                        <p>오동나무 관 제공</p>
                         <p>유골함 제공</p>
                       </div>
                     </li>
@@ -703,7 +735,7 @@
                     </li>
                     <li>
                       <div class="table_bold">
-                        <p>장례관리사</p>
+                        <p>행사복지사</p>
                       </div>
                       <div class="table_nomal">
                         <p>1명 (3일 / 16시간)</p>
@@ -747,10 +779,19 @@
                     </li>
                     <li>
                       <div class="table_bold">
-                        <p>목관</p>
+                        <p>관</p>
                       </div>
-                      <div class="table_nomal">
-                        <p>오동나무 4.2cm 2단</p>
+                      <div class="table_nomal two">
+                        <ul>
+                          <li>
+                            <p>매장 시</p>
+                            <p>오동나무 4.2cm 2단</p>
+                          </li>
+                          <li>
+                            <p>화장 시</p>
+                            <p>오동나무</p>
+                          </li>
+                        </ul>
                       </div>
                     </li>
                     <li>
@@ -758,7 +799,6 @@
                         <p>화장 시</p>
                       </div>
                       <div class="table_nomal">
-                        <p>오동나무 관 제공</p>
                         <p>유골함 제공</p>
                       </div>
                     </li>
@@ -824,7 +864,7 @@
                     </li>
                     <li>
                       <div class="table_bold">
-                        <p>장례관리사</p>
+                        <p>행사복지사</p>
                       </div>
                       <div class="table_nomal">
                         <p>1명 (3일 / 16시간)</p>
@@ -868,10 +908,19 @@
                     </li>
                     <li>
                       <div class="table_bold">
-                        <p>목관</p>
+                        <p>관</p>
                       </div>
-                      <div class="table_nomal">
-                        <p>오동나무 4.2cm 2단</p>
+                      <div class="table_nomal two">
+                        <ul>
+                          <li>
+                            <p>매장 시</p>
+                            <p>오동나무 4.2cm 2단</p>
+                          </li>
+                          <li>
+                            <p>화장 시</p>
+                            <p>오동나무</p>
+                          </li>
+                        </ul>
                       </div>
                     </li>
                     <li>
@@ -879,7 +928,6 @@
                         <p>화장 시</p>
                       </div>
                       <div class="table_nomal">
-                        <p>오동나무 관 제공</p>
                         <p>유골함 제공</p>
                       </div>
                     </li>
