--- a/tailim.html
+++ b/tailim.html
@@ -212,7 +212,7 @@
                     </li>
                     <li>
                       <div class="table_bold">
-                        <p>장례관리사</p>
+                        <p>행사복지사</p>
                       </div>
                       <div class="table_nomal">
                         <p>1명 (3일 / 16시간)</p>
@@ -256,10 +256,19 @@
                     </li>
                     <li>
                       <div class="table_bold">
-                        <p>목관</p>
+                        <p>관</p>
                       </div>
-                      <div class="table_nomal">
-                        <p>오동나무 4.2cm 2단</p>
+                      <div class="table_nomal two">
+                        <ul>
+                          <li>
+                            <p>매장 시</p>
+                            <p>오동나무 4.2cm 2단</p>
+                          </li>
+                          <li>
+                            <p>화장 시</p>
+                            <p>오동나무</p>
+                          </li>
+                        </ul>
                       </div>
                     </li>
                     <li>
@@ -267,7 +276,6 @@
                         <p>화장 시</p>
                       </div>
                       <div class="table_nomal">
-                        <p>오동나무 관 제공</p>
                         <p>유골함 제공</p>
                       </div>
                     </li>
@@ -322,7 +330,7 @@
                     </li>
                     <li>
                       <div class="table_bold">
-                        <p>장례관리사</p>
+                        <p>행사복지사</p>
                       </div>
                       <div class="table_nomal">
                         <p>1명 (3일 / 16시간)</p>
@@ -366,10 +374,19 @@
                     </li>
                     <li>
                       <div class="table_bold">
-                        <p>목관</p>
+                        <p>관</p>
                       </div>
-                      <div class="table_nomal">
-                        <p>오동나무 4.2cm 2단</p>
+                      <div class="table_nomal two">
+                        <ul>
+                          <li>
+                            <p>매장 시</p>
+                            <p>오동나무 4.2cm 2단</p>
+                          </li>
+                          <li>
+                            <p>화장 시</p>
+                            <p>오동나무</p>
+                          </li>
+                        </ul>
                       </div>
                     </li>
                     <li>
@@ -377,7 +394,6 @@
                         <p>화장 시</p>
                       </div>
                       <div class="table_nomal">
-                        <p>오동나무 관 제공</p>
                         <p>유골함 제공</p>
                       </div>
                     </li>
@@ -432,7 +448,7 @@
                     </li>
                     <li>
                       <div class="table_bold">
-                        <p>장례관리사</p>
+                        <p>행사복지사</p>
                       </div>
                       <div class="table_nomal">
                         <p>1명 (3일 / 16시간)</p>
@@ -476,10 +492,19 @@
                     </li>
                     <li>
                       <div class="table_bold">
-                        <p>목관</p>
+                        <p>관</p>
                       </div>
-                      <div class="table_nomal">
-                        <p>오동나무 4.2cm 2단</p>
+                      <div class="table_nomal two">
+                        <ul>
+                          <li>
+                            <p>매장 시</p>
+                            <p>오동나무 4.2cm 2단</p>
+                          </li>
+                          <li>
+                            <p>화장 시</p>
+                            <p>오동나무</p>
+                          </li>
+                        </ul>
                       </div>
                     </li>
                     <li>
@@ -487,7 +512,6 @@
                         <p>화장 시</p>
                       </div>
                       <div class="table_nomal">
-                        <p>오동나무 관 제공</p>
                         <p>유골함 제공</p>
                       </div>
                     </li>
@@ -549,7 +573,7 @@
                     </li>
                     <li>
                       <div class="table_bold">
-                        <p>장례관리사</p>
+                        <p>행사복지사</p>
                       </div>
                       <div class="table_nomal">
                         <p>1명 (3일 / 16시간)</p>
@@ -593,10 +617,19 @@
                     </li>
                     <li>
                       <div class="table_bold">
-                        <p>목관</p>
+                        <p>관</p>
                       </div>
-                      <div class="table_nomal">
-                        <p>오동나무 4.2cm 2단</p>
+                      <div class="table_nomal two">
+                        <ul>
+                          <li>
+                            <p>매장 시</p>
+                            <p>오동나무 4.2cm 2단</p>
+                          </li>
+                          <li>
+                            <p>화장 시</p>
+                            <p>오동나무</p>
+                          </li>
+                        </ul>
                       </div>
                     </li>
                     <li>
@@ -604,7 +637,6 @@
                         <p>화장 시</p>
                       </div>
                       <div class="table_nomal">
-                        <p>오동나무 관 제공</p>
                         <p>유골함 제공</p>
                       </div>
                     </li>
@@ -662,7 +694,7 @@
                     </li>
                     <li>
                       <div class="table_bold">
-                        <p>장례관리사</p>
+                        <p>행사복지사</p>
                       </div>
                       <div class="table_nomal">
                         <p>1명 (3일 / 16시간)</p>
@@ -706,10 +738,19 @@
                     </li>
                     <li>
                       <div class="table_bold">
-                        <p>목관</p>
+                        <p>관</p>
                       </div>
-                      <div class="table_nomal">
-                        <p>오동나무 4.2cm 2단</p>
+                      <div class="table_nomal two">
+                        <ul>
+                          <li>
+                            <p>매장 시</p>
+                            <p>오동나무 4.2cm 2단</p>
+                          </li>
+                          <li>
+                            <p>화장 시</p>
+                            <p>오동나무</p>
+                          </li>
+                        </ul>
                       </div>
                     </li>
                     <li>
@@ -717,7 +758,6 @@
                         <p>화장 시</p>
                       </div>
                       <div class="table_nomal">
-                        <p>오동나무 관 제공</p>
                         <p>유골함 제공</p>
                       </div>
                     </li>
@@ -775,7 +815,7 @@
                     </li>
                     <li>
                       <div class="table_bold">
-                        <p>장례관리사</p>
+                        <p>행사복지사</p>
                       </div>
                       <div class="table_nomal">
                         <p>1명 (3일 / 16시간)</p>
@@ -819,10 +859,19 @@
                     </li>
                     <li>
                       <div class="table_bold">
-                        <p>목관</p>
+                        <p>관</p>
                       </div>
-                      <div class="table_nomal">
-                        <p>오동나무 4.2cm 2단</p>
+                      <div class="table_nomal two">
+                        <ul>
+                          <li>
+                            <p>매장 시</p>
+                            <p>오동나무 4.2cm 2단</p>
+                          </li>
+                          <li>
+                            <p>화장 시</p>
+                            <p>오동나무</p>
+                          </li>
+                        </ul>
                       </div>
                     </li>
                     <li>
@@ -830,7 +879,6 @@
                         <p>화장 시</p>
                       </div>
                       <div class="table_nomal">
-                        <p>오동나무 관 제공</p>
                         <p>유골함 제공</p>
                       </div>
                     </li>
