--- a/teo.html
+++ b/teo.html
@@ -200,7 +200,7 @@
                     </li>
                     <li>
                       <div class="table_bold">
-                        <p>장례관리사</p>
+                        <p>행사복지사</p>
                       </div>
                       <div class="table_nomal">
                         <p>1명 (3일 / 16시간)</p>
@@ -252,10 +252,19 @@
                     </li>
                     <li>
                       <div class="table_bold">
-                        <p>목관</p>
+                        <p>관</p>
                       </div>
-                      <div class="table_nomal">
-                        <p>오동나무 4.2cm 2단</p>
+                      <div class="table_nomal two">
+                        <ul>
+                          <li>
+                            <p>매장 시</p>
+                            <p>오동나무 4.2cm 2단</p>
+                          </li>
+                          <li>
+                            <p>화장 시</p>
+                            <p>오동나무</p>
+                          </li>
+                        </ul>
                       </div>
                     </li>
                     <li>
@@ -263,7 +272,6 @@
                         <p>화장 시</p>
                       </div>
                       <div class="table_nomal">
-                        <p>오동나무 관 제공</p>
                         <p>유골함 제공</p>
                       </div>
                     </li>
@@ -327,7 +335,7 @@
                     </li>
                     <li>
                       <div class="table_bold">
-                        <p>장례관리사</p>
+                        <p>행사복지사</p>
                       </div>
                       <div class="table_nomal">
                         <p>1명 (3일 / 16시간)</p>
@@ -379,10 +387,19 @@
                     </li>
                     <li>
                       <div class="table_bold">
-                        <p>목관</p>
+                        <p>관</p>
                       </div>
-                      <div class="table_nomal">
-                        <p>오동나무 4.2cm 2단</p>
+                      <div class="table_nomal two">
+                        <ul>
+                          <li>
+                            <p>매장 시</p>
+                            <p>오동나무 4.2cm 2단</p>
+                          </li>
+                          <li>
+                            <p>화장 시</p>
+                            <p>오동나무</p>
+                          </li>
+                        </ul>
                       </div>
                     </li>
                     <li>
@@ -390,7 +407,6 @@
                         <p>화장 시</p>
                       </div>
                       <div class="table_nomal">
-                        <p>오동나무 관 제공</p>
                         <p>유골함 제공</p>
                       </div>
                     </li>
@@ -461,7 +477,7 @@
                     </li>
                     <li>
                       <div class="table_bold">
-                        <p>장례관리사</p>
+                        <p>행사복지사</p>
                       </div>
                       <div class="table_nomal">
                         <p>1명 (3일 / 16시간)</p>
@@ -513,10 +529,19 @@
                     </li>
                     <li>
                       <div class="table_bold">
-                        <p>목관</p>
+                        <p>관</p>
                       </div>
-                      <div class="table_nomal">
-                        <p>오동나무 4.2cm 2단</p>
+                      <div class="table_nomal two">
+                        <ul>
+                          <li>
+                            <p>매장 시</p>
+                            <p>오동나무 4.2cm 2단</p>
+                          </li>
+                          <li>
+                            <p>화장 시</p>
+                            <p>오동나무</p>
+                          </li>
+                        </ul>
                       </div>
                     </li>
                     <li>
@@ -524,7 +549,6 @@
                         <p>화장 시</p>
                       </div>
                       <div class="table_nomal">
-                        <p>오동나무 관 제공</p>
                         <p>유골함 제공</p>
                       </div>
                     </li>
@@ -591,7 +615,7 @@
                     </li>
                     <li>
                       <div class="table_bold">
-                        <p>장례관리사</p>
+                        <p>행사복지사</p>
                       </div>
                       <div class="table_nomal">
                         <p>1명 (3일 / 16시간)</p>
@@ -643,10 +667,19 @@
                     </li>
                     <li>
                       <div class="table_bold">
-                        <p>목관</p>
+                        <p>관</p>
                       </div>
-                      <div class="table_nomal">
-                        <p>오동나무 4.2cm 2단</p>
+                      <div class="table_nomal two">
+                        <ul>
+                          <li>
+                            <p>매장 시</p>
+                            <p>오동나무 4.2cm 2단</p>
+                          </li>
+                          <li>
+                            <p>화장 시</p>
+                            <p>오동나무</p>
+                          </li>
+                        </ul>
                       </div>
                     </li>
                     <li>
@@ -654,7 +687,6 @@
                         <p>화장 시</p>
                       </div>
                       <div class="table_nomal">
-                        <p>오동나무 관 제공</p>
                         <p>유골함 제공</p>
                       </div>
                     </li>
