--- a/titanium.html
+++ b/titanium.html
@@ -175,7 +175,7 @@
                   </li>
                   <li>
                     <div class="table_bold">
-                      <p>장례관리사</p>
+                      <p>행사복지사</p>
                     </div>
                     <div class="table_nomal">
                       <p>1명 (3일 / 16시간)</p>
@@ -231,10 +231,19 @@
                   </li>
                   <li>
                     <div class="table_bold">
-                      <p>목관</p>
+                      <p>관</p>
                     </div>
-                    <div class="table_nomal">
-                      <p>오동나무 4.2cm 2단</p>
+                    <div class="table_nomal two">
+                      <ul>
+                        <li>
+                          <p>매장 시</p>
+                          <p>오동나무 4.2cm 2단</p>
+                        </li>
+                        <li>
+                          <p>화장 시</p>
+                          <p>오동나무</p>
+                        </li>
+                      </ul>
                     </div>
                   </li>
                   <li>
@@ -242,7 +251,6 @@
                       <p>화장 시</p>
                     </div>
                     <div class="table_nomal">
-                      <p>오동나무 관 제공</p>
                       <p>유골함 제공</p>
                     </div>
                   </li>
