--- a/tailim_packaging.html
+++ b/tailim_packaging.html
@@ -209,7 +209,7 @@
                     </li>
                     <li>
                       <div class="table_bold">
-                        <p>장례관리사</p>
+                        <p>행사복지사</p>
                       </div>
                       <div class="table_nomal">
                         <p>1명 (3일 / 16시간)</p>
@@ -253,10 +253,19 @@
                     </li>
                     <li>
                       <div class="table_bold">
-                        <p>목관</p>
+                        <p>관</p>
                       </div>
-                      <div class="table_nomal">
-                        <p>오동나무 4.2cm 2단</p>
+                      <div class="table_nomal two">
+                        <ul>
+                          <li>
+                            <p>매장 시</p>
+                            <p>오동나무 4.2cm 2단</p>
+                          </li>
+                          <li>
+                            <p>화장 시</p>
+                            <p>오동나무</p>
+                          </li>
+                        </ul>
                       </div>
                     </li>
                     <li>
@@ -264,7 +273,6 @@
                         <p>화장 시</p>
                       </div>
                       <div class="table_nomal">
-                        <p>오동나무 관 제공</p>
                         <p>유골함 제공</p>
                       </div>
                     </li>
@@ -319,7 +327,7 @@
                     </li>
                     <li>
                       <div class="table_bold">
-                        <p>장례관리사</p>
+                        <p>행사복지사</p>
                       </div>
                       <div class="table_nomal">
                         <p>1명 (3일 / 16시간)</p>
@@ -363,10 +371,19 @@
                     </li>
                     <li>
                       <div class="table_bold">
-                        <p>목관</p>
+                        <p>관</p>
                       </div>
-                      <div class="table_nomal">
-                        <p>오동나무 4.2cm 2단</p>
+                      <div class="table_nomal two">
+                        <ul>
+                          <li>
+                            <p>매장 시</p>
+                            <p>오동나무 4.2cm 2단</p>
+                          </li>
+                          <li>
+                            <p>화장 시</p>
+                            <p>오동나무</p>
+                          </li>
+                        </ul>
                       </div>
                     </li>
                     <li>
@@ -374,7 +391,6 @@
                         <p>화장 시</p>
                       </div>
                       <div class="table_nomal">
-                        <p>오동나무 관 제공</p>
                         <p>유골함 제공</p>
                       </div>
                     </li>
@@ -429,7 +445,7 @@
                     </li>
                     <li>
                       <div class="table_bold">
-                        <p>장례관리사</p>
+                        <p>행사복지사</p>
                       </div>
                       <div class="table_nomal">
                         <p>1명 (3일 / 16시간)</p>
@@ -473,10 +489,19 @@
                     </li>
                     <li>
                       <div class="table_bold">
-                        <p>목관</p>
+                        <p>관</p>
                       </div>
-                      <div class="table_nomal">
-                        <p>오동나무 4.2cm 2단</p>
+                      <div class="table_nomal two">
+                        <ul>
+                          <li>
+                            <p>매장 시</p>
+                            <p>오동나무 4.2cm 2단</p>
+                          </li>
+                          <li>
+                            <p>화장 시</p>
+                            <p>오동나무</p>
+                          </li>
+                        </ul>
                       </div>
                     </li>
                     <li>
@@ -484,7 +509,6 @@
                         <p>화장 시</p>
                       </div>
                       <div class="table_nomal">
-                        <p>오동나무 관 제공</p>
                         <p>유골함 제공</p>
                       </div>
                     </li>
@@ -546,7 +570,7 @@
                     </li>
                     <li>
                       <div class="table_bold">
-                        <p>장례관리사</p>
+                        <p>행사복지사</p>
                       </div>
                       <div class="table_nomal">
                         <p>1명 (3일 / 16시간)</p>
@@ -590,10 +614,19 @@
                     </li>
                     <li>
                       <div class="table_bold">
-                        <p>목관</p>
+                        <p>관</p>
                       </div>
-                      <div class="table_nomal">
-                        <p>오동나무 4.2cm 2단</p>
+                      <div class="table_nomal two">
+                        <ul>
+                          <li>
+                            <p>매장 시</p>
+                            <p>오동나무 4.2cm 2단</p>
+                          </li>
+                          <li>
+                            <p>화장 시</p>
+                            <p>오동나무</p>
+                          </li>
+                        </ul>
                       </div>
                     </li>
                     <li>
@@ -601,7 +634,6 @@
                         <p>화장 시</p>
                       </div>
                       <div class="table_nomal">
-                        <p>오동나무 관 제공</p>
                         <p>유골함 제공</p>
                       </div>
                     </li>
@@ -659,7 +691,7 @@
                     </li>
                     <li>
                       <div class="table_bold">
-                        <p>장례관리사</p>
+                        <p>행사복지사</p>
                       </div>
                       <div class="table_nomal">
                         <p>1명 (3일 / 16시간)</p>
@@ -703,10 +735,19 @@
                     </li>
                     <li>
                       <div class="table_bold">
-                        <p>목관</p>
+                        <p>관</p>
                       </div>
-                      <div class="table_nomal">
-                        <p>오동나무 4.2cm 2단</p>
+                      <div class="table_nomal two">
+                        <ul>
+                          <li>
+                            <p>매장 시</p>
+                            <p>오동나무 4.2cm 2단</p>
+                          </li>
+                          <li>
+                            <p>화장 시</p>
+                            <p>오동나무</p>
+                          </li>
+                        </ul>
                       </div>
                     </li>
                     <li>
@@ -714,7 +755,6 @@
                         <p>화장 시</p>
                       </div>
                       <div class="table_nomal">
-                        <p>오동나무 관 제공</p>
                         <p>유골함 제공</p>
                       </div>
                     </li>
@@ -772,7 +812,7 @@
                     </li>
                     <li>
                       <div class="table_bold">
-                        <p>장례관리사</p>
+                        <p>행사복지사</p>
                       </div>
                       <div class="table_nomal">
                         <p>1명 (3일 / 16시간)</p>
@@ -816,10 +856,19 @@
                     </li>
                     <li>
                       <div class="table_bold">
-                        <p>목관</p>
+                        <p>관</p>
                       </div>
-                      <div class="table_nomal">
-                        <p>오동나무 4.2cm 2단</p>
+                      <div class="table_nomal two">
+                        <ul>
+                          <li>
+                            <p>매장 시</p>
+                            <p>오동나무 4.2cm 2단</p>
+                          </li>
+                          <li>
+                            <p>화장 시</p>
+                            <p>오동나무</p>
+                          </li>
+                        </ul>
                       </div>
                     </li>
                     <li>
@@ -827,7 +876,6 @@
                         <p>화장 시</p>
                       </div>
                       <div class="table_nomal">
-                        <p>오동나무 관 제공</p>
                         <p>유골함 제공</p>
                       </div>
                     </li>
